syntax = "proto3";

option csharp_namespace = "TestGrpc";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHelloUnary (HelloRequest) returns (HelloReply);

  rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply);

  rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply);

  rpc SayHelloDuplex (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
